terraform-aws-project/main.tf
provider "aws" {
  region = "ap-south-1"
}


resource "aws_security_group" "web_ssh_sg" {
  name        = "web_ssh_sg"
  description = "Allow SSH and HTTP traffic"

  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "automation_server" {
  ami                    = "ami-0011550b539717e2a" 
  instance_type          = "t3.micro"
  key_name               = "ansible-keys"
  vpc_security_group_ids = [aws_security_group.web_ssh_sg.id] 

  tags = {
    Name = "DevOps-IaC-Server"
  }
}
